After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695484 - window-slot: fix memory leak
window-slot: fix memory leak
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-09 10:06 UTC by Pavel Vasin
Modified: 2013-03-19 07:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window-slot: fix memory leak (684 bytes, patch)
2013-03-09 10:06 UTC, Pavel Vasin
committed Details | Review

Description Pavel Vasin 2013-03-09 10:06:30 UTC
Created attachment 238450 [details] [review]
window-slot: fix memory leak

patch attched
Comment 1 Cosimo Cecchi 2013-03-19 07:58:27 UTC
Attachment 238450 [details] pushed as 9ff62bb - window-slot: fix memory leak

Thanks - We actually have to free it with nautilus_file_list_free(), since files in the list are also referenced - pushed an amended version that does that.