window-slot: fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=695484